k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ingress
  namespace: hlt

spec:
  ingressClassName: nginx
  rules:
    - host: hlt.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-ingress
  namespace: hlt
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth-service.hlt.svc.cluster.local:80/api/auth/validate"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User-Id"

spec:
  ingressClassName: nginx
  rules:
    - host: hlt.com
      http:
        paths:
          - path: /api/chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 80
          - path: /api/event
            pathType: Prefix
            backend:
              service:
                name: event-service
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
